# nix-enclaver

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/actions/cargo-zigbuild/: Dockerfile
.github/workflows/: ci.yaml  release.yaml
enclaver/: Cargo.toml
enclaver/src/: build.rs
examples/sealing-rs/: .gitignore  Cargo.toml  README.md  enclaver.yaml  flake.nix  pcr-policy-stub.json
examples/sealing-rs/src/: main.rs
src/: constants.rs  lib.rs  manifest.rs  nitro_cli.rs  run.rs  utils.rs
src/proxy/: kms.rs
